--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
 
 dependencies:
   angular: ^5.0.0-beta
+  angular_forms: ^2.0.0-beta
+  angular_router: ^2.0.0-alpha+15
 
 dev_dependencies:
   angular_test: ^2.0.0-beta
@@ -14,3 +16,4 @@ dev_dependencies:
   build_test: ^0.10.2
   build_web_compilers: ^0.4.0
   test: ^1.0.0
+
